Summary of important user-visible changes for dist-zilla-pluginbundle-Bioperl
-----------------------------------------------------------------------------

{{$NEXT}}
  * The Git will commit changes to the Changes and dist.ini file as part of the
    release, and the created tag mentions the distribution name.
  * Created a new Pod::Weaver plugin bundle for BioPerl which is used as default
    by Bioperl's Dist::Zilla pluginbundle.
  * [Readme] is now filtered from [@Basic] since most bioperl distributions
    already have a README or README.md file and if teh first already exists, it
    conflicts with [Readme].
  * Removed the option disable_pod_coverage_tests. The use of [@Filter]
    is recommended instead.
  * Removed disable_trailing_whitespace_tests. Set `trailing_whitespace = 0`
  * Removed the repository, repository_type, repository_web, github_user,
    repository_at, and homepage_url options. Replaced with github.user and
    homepage from the [AutoMetaResources] plugin.
  * Removed the bugtracker_email and bugtracker_url. Replaced by [MetaResources]
    bugtracker.mailto and bugtracker.web
  * Include [Git::Check] and [Git::Commit].
  * Option dist is no longer required.
  * Fix default bugtracker.email and bugtracker.web values.

0.02      2012-03-21 22:41:54 America/Chicago
  * Fix default git repo user (apologies to rafl)

0.01      2012-03-21 14:45:16 America/Chicago
  * Initial release.