@@ -2,6 +2,8 @@ Summary of important user-visible changes for dist-zilla-pluginbundle-Bioperl
 -----------------------------------------------------------------------------
 
 {{$NEXT}}
+  * The default authority for the distribution is now cpan:BIOPERLML.
+  * Included the [MojibakeTests] plugin to check for correct encoding.
   * The Git will commit changes to the Changes and dist.ini file as part of the
     release, and the created tag mentions the distribution name.
   * Created a new Pod::Weaver plugin bundle for BioPerl which is used as default
